Fix alignment on granting trust form.

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -483,8 +483,12 @@ html.t-balance header nav ul > li.active#nav-wallet > a:after {
   }
 
   form {
-    .error {
-      margin-top: 0;
+    .amount {
+      .clearfix;
+      > * {
+        display: block;
+        float: left;
+      }
     }
   }
 
